--- a/arxiv-paper/MCG-arXiv2015.tex
+++ b/arxiv-paper/MCG-arXiv2015.tex
@@ -2557,7 +2557,7 @@ This work was partially supported by ONR MURI N000141010933.
 %---------------------------------------------------------------------------------------------------------
 
 \bibliographystyle{IEEEtran}
-\bibliography{PAMI2014-MCG}
+\bibliography{MCG-arXiv2015}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{figures/authors/jordi_color.png}}]
 {Jordi Pont-Tuset} is a post-doctoral researcher at ETHZ, Switzerland,
