- Shape sharing added to the box comparison for cmpleteness

--- a/arxiv-paper/MCG-arXiv2015.tex
+++ b/arxiv-paper/MCG-arXiv2015.tex
@@ -2156,7 +2156,7 @@ This approach decreases the computational load one order of magnitude while keep
 	    \addplot+[cyan,solid,mark=none, thick]                                   table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_CPMC_boxes.txt};
 	    \addplot+[olive,solid,mark=none, thick]                                  table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_CI_boxes.txt};
 		\addplot+[only marks,red,solid,mark=asterisk, mark size=1.75, thick]     table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_RIGOR_boxes.txt};
-  	    %\addplot+[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]  table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_ShSh.txt};
+  	    \addplot+[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]  table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_ShSh_boxes.txt};
    	    \addplot+[blue,only marks,solid,mark=o, mark size=1.6, thick]            table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_RP_boxes.txt};
 		\addplot+[only marks,black,solid,mark=square, mark size=1.5, thick]      table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_SeSe_boxes.txt};
 		\addplot+[only marks,olive  ,solid,mark=asterisk, mark size=1.75, thick] table[x=ncands,y=rec_at_0.5] {data/obj_cands/pascal2012_val2012_EB_boxes.txt};
@@ -2171,7 +2171,7 @@ This approach decreases the computational load one order of magnitude while keep
 	    \addplot+[cyan,solid,mark=none, thick]                                   table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_CPMC_boxes.txt};
 	  	\addplot+[olive,solid,mark=none, thick]                                  table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_CI_boxes.txt};
 		\addplot+[only marks,red,solid,mark=asterisk, mark size=1.75, thick]     table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_RIGOR_boxes.txt};
-  	    %\addplot+[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]  table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_ShSh.txt};
+  	    \addplot+[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]  table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_ShSh_boxes.txt};
    	    \addplot+[blue,only marks,solid,mark=o, mark size=1.6, thick]            table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_RP_boxes.txt};
 		\addplot+[only marks,black,solid,mark=square, mark size=1.5, thick]      table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_SeSe_boxes.txt};
 	    \addplot+[only marks,olive  ,solid,mark=asterisk, mark size=1.75, thick] table[x=ncands,y=rec_at_0.7] {data/obj_cands/pascal2012_val2012_EB_boxes.txt};
@@ -2186,7 +2186,7 @@ This approach decreases the computational load one order of magnitude while keep
 	    \addplot+[cyan,solid,mark=none, thick]                                   table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_CPMC_boxes.txt};
 	  	\addplot+[olive,solid,mark=none, thick]                                  table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_CI_boxes.txt};
 		\addplot+[only marks,red,solid,mark=asterisk, mark size=1.75, thick]     table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_RIGOR_boxes.txt};
-  	    %\addplot+[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]  table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_ShSh.txt};
+  	    \addplot+[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]  table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_ShSh_boxes.txt};
    	    \addplot+[blue,only marks   ,solid,mark size=1.6,mark=o, thick]          table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_RP_boxes.txt};
 		\addplot+[only marks,black  ,solid,mark=square, mark size=1.5, thick]    table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_SeSe_boxes.txt};
 	    \addplot+[only marks,olive  ,solid,mark=asterisk, mark size=1.75, thick] table[x=ncands,y=rec_at_0.85] {data/obj_cands/pascal2012_val2012_EB_boxes.txt};
@@ -2285,6 +2285,7 @@ This approach decreases the computational load one order of magnitude while keep
         \addplot[only marks,blue   ,solid,mark=triangle,mark size=1.9, thick]   coordinates {( 1, 0.7)( 1, 0.8)};
 	  	\addplot[only marks,cyan   ,solid,mark=square,mark size=1.5, thick]     coordinates {( 1, 0.7)( 1, 0.8)};
 	    \addplot[only marks,red    ,solid,mark=asterisk, mark size=1.75, thick] coordinates {( 1, 0.7)( 1, 0.8)};
+	    \addplot[only marks,magenta,solid,mark=triangle,mark size=1.9, thick]   coordinates {( 1, 0.7)( 1, 0.8)};
    	    \addplot[only marks,black  ,solid,mark=square, mark size=1.5, thick]    coordinates {( 1, 0.7)( 1, 0.8)};
 	    \addplot[only marks,blue   ,solid,mark=o,mark size=1.6, thick]          coordinates {( 1, 0.7)( 1, 0.8)};
 	    \addplot[only marks,olive  ,solid,mark=asterisk, mark size=1.75, thick] coordinates {( 1, 0.7)( 1, 0.8)};
@@ -2299,7 +2300,8 @@ This approach decreases the computational load one order of magnitude while keep
         \addlegendentry{GOP~\cite{Kraehenbuehl2014}}
 		\addlegendentry{GLS~\cite{Rantalankila2014}}
 	   \addlegendentry{RIGOR~\cite{Humayun2014}}
-	   \addlegendentry{SeSe~\cite{Uijlings2013}}
+		\addlegendentry{ShSh~\cite{Kim2012}}	   
+		\addlegendentry{SeSe~\cite{Uijlings2013}}
 	   \addlegendentry{RP~\cite{Manen2013}}
 	   \addlegendentry{EB~\cite{Zitnick2014}}
 	   \addlegendentry{BING~\cite{Cheng2014}}
